# kafka-crab-js

./: .gitignore  .oxlintrc.json  Cargo.toml  README.md  build.mjs  dprint.json  esbuild.mjs  index.d.ts  index.js  js-binding.cjs  js-binding.d.ts  js-binding.js  kafka-client.d.ts  kafka-client.js  kafka-stream-readable.d.ts  kafka-stream-readable.js  package.json  pnpm-lock.yaml  sample.mjs  test.mjs  tsconfig.json
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: index.spec.mjs  index.test.mjs
__test__/integration/: compose.yaml  kafka.test.mjs
docs/wiki/: Home.md
example/: events.mjs  kafka-consumer-with-retry.mjs  kafka-stream-reconnect.mjs  sample.mjs  simple.mjs  stream-consumer.mjs  stream-sample.mjs  stream.mjs  stream_consumer.mjs  worker.mjs
js-src/: index.d.ts  index.ts  js-binding.d.ts  js-binding.js  kafka-client.ts  kafka-stream-readable.d.ts  kafka-stream-readable.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/kafka/: kafka_admin.rs  kafka_client.rs  kafka_client_config.rs  kafka_consumer.rs  kafka_producer.rs  kafka_util.rs  mod.rs  model.rs
src/kafka/consumer/: consumer_context.rs  consumer_helper.rs  consumer_model.rs  consumer_thread.rs  context.rs  kafka_consumer.rs  kafka_stream_consumer.rs  logging_consumer.rs  mod.rs  model.rs  partition_consumer.rs
src/kafka/producer/: kafka_producer.rs  mod.rs  model.rs
