[package]
edition = "2021"
name = "kafka-crab-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2", default-features = false, features = [
    "napi8",
    "tokio_rt",
    "serde-json",
] }
napi-derive = "2"

anyhow = { version = "1.0", features = ["backtrace"] }

rdkafka = { version = "0.34", features = [
    "libz-static",
    "cmake-build",
    "tokio",
    "ssl",
] }
tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
