[package]
edition = "2021"
name = "kafka-crab-js"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-alpha.33", default-features = false, features = [ "napi9", "tokio_rt", "serde-json" ] }
napi-derive = "3.0.0-alpha.29"

anyhow = { version = "1.0", features = ["backtrace"] }

rdkafka = { version = "0.37", features = [
    "libz-static",
    "cmake-build",
    "tokio",
    "ssl-vendored"
] }
tokio = { version = "1.44.2", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
nanoid = "0.4"

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
strip = "symbols"
